src/test/ui/btreemap/btreemap-index-mut.stderr
error[E0594]: cannot assign to data in an index of `BTreeMap<u32, u32>`
  --> $DIR/btreemap-index-mut.rs:5:5
   |
LL |     map[&0] = 1;
   |     ^^^^^^^^^^^ cannot assign
   |
   = help: trait `IndexMut` is required to modify indexed content, but it is not implemented for `BTreeMap<u32, u32>`
   = help: to modify a `BTreeMap<u32, u32>`, use `.get_mut()`, `.insert()` or the entry API

error: aborting due to previous error

For more information about this error, try `rustc --explain E0594`.
